--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Bootstrap 5 CSS -->
+  <link rel="stylesheet" href="https://bootswatch.com/5/zephyr/bootstrap.min.css">
+
+  <!-- Font Awesome 6 CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
 
   <link rel="stylesheet" href="./css/style.css" />
 
@@ -22,110 +24,93 @@
     ====================
     ====================
 
-      Header
+      Navbar Header
 
     ====================
     ====================
 
    -->
 
-  <header id="main-header">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light" id="main-nav">
 
-      <div>
-        <a href="#">
-          <img src="./images/brand.png" alt="school-brand-image" id="branding">
-        </a>
+    <div class="container-fluid">
+
+      <a class="navbar-brand" href="#">
+        <img id="brand-img" class="img-fluid" src="./images/brand.png" alt="brand-img">
+      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home"></i> Home</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fas fa-child"></i> School Life
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#"><i class="fas fa-photo-film"></i> Gallery</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fas fa-school"></i> General
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#"><i class="fas fa-paperclip"></i> Enrollment Form</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fas fa-book"></i> Study Material</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fas fa-chalkboard-user"></i> Academics</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fas fa-newspaper"></i> News </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#"><i class="fas fa-newspaper"></i> News</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fas fa-address-card"></i> About
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#"><i class="fas fa-users"></i> Our Team</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fas fa-award"></i> Alumni</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Hall of Fame</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fas fa-money-check"></i> Sponsors</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-address-book"></i> Contact</a>
+          </li>
+        </ul>
+        <a href="#" id="login-btn" class="d-flex btn btn-primary"><i class="fas fa-sign-in-alt"></i> LogIn</a>
       </div>
-
-      <nav id="main-nav">
-        <ul>
-          <li><a href="#" class="active"><i class="fas fa-home"></i> Home</a></li>
-          <li><a href="#"><i class="fas fa-child"></i> School Life <i class="fas fa-caret-down"></i> </a>
-            <ul class="sub-menu">
-              <li><a href="#"><i class="fas fa-photo-film"></i> Gallery</a></li>
-            </ul>
-          </li>
-          <li><a href="#"><i class="fas fa-school"></i> General <i class="fas fa-caret-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="#"><i class="fas fa-paperclip"></i> Enrollment Form</a></li>
-              <li><a href="#"><i class="fas fa-book"></i> Study Material</a></li>
-              <li><a href="#"><i class="fas fa-chalkboard-user"></i> Academics</a></li>
-            </ul>
-          </li>
-          <li><a href="#"><i class="fas fa-newspaper"></i> News <i class="fas fa-caret-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="#"><i class="fas fa-newspaper"></i> News</a></li>
-            </ul>
-          </li>
-          <li><a href="#"><i class="fas fa-address-card"></i> About <i class="fas fa-caret-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="#"><i class="fas fa-users"></i> Our Team</a></li>
-              <li><a href="#"><i class="fas fa-award"></i> Alumni</a></li>
-              <li><a href="#"><i class="fas fa-user-graduate"></i> Hall of Fame</a></li>
-              <li><a href="#"><i class="fas fa-money-check"></i> Sponsors</a></li>
-            </ul>
-          </li>
-          <li><a href="#"><i class="fas fa-address-book"></i> Contact</a></li>
-        </ul>
-      </nav>
-
-      <a href="#" class="btn" id="login"><i class="fas fa-sign-in-alt"></i> LogIn</a>
-
-      <button class="btn" id="menu-toggle"><i class="fas fa-bars "></i></button>
     </div>
-  </header>
-
-  <!-- 
-  
-      ====================
-      ====================
-  
-        Side Navigation
-  
-      ====================
-      ====================
-  
-  -->
-
-  <nav id="side-nav">
-    <ul>
-      <li class="active"><a href="#"><i class="fas fa-home"></i>Home</a></li>
-      <li class="sub-menu"><a href="#"><i class="fas fa-child"></i><span>School Life</span> <i
-            class="fas fa-caret-down"></i></a>
-        <ul>
-          <li><a href="#"><i class="fas fa-photo-film"></i> Gallery</a></li>
-        </ul>
-      </li>
-      <li class="sub-menu"><a href="#"><i class="fas fa-school"></i><span>General</span> <i
-            class="fas fa-caret-down"></i></a>
-        <ul>
-          <li><a href="#"><i class="fas fa-paperclip"></i> Enrollment Form</a></li>
-          <li><a href="#"><i class="fas fa-book"></i> Study Material</a></li>
-          <li><a href="#"><i class="fas fa-chalkboard-user"></i> Academics</a></li>
-        </ul>
-      </li>
-      <li class="sub-menu"><a href="#"><i class="fas fa-newspaper"></i><span>News</span> <i
-            class="fas fa-caret-down"></i></a>
-        <ul>
-          <li><a href="#"><i class="fas fa-newspaper"></i> News</a>
-          </li>
-        </ul>
-      </li>
-      <li class="sub-menu"><a href="#"><i class="fas fa-address-card"></i><span>About</span> <i
-            class="fas fa-caret-down"></i></a>
-        <ul>
-          <li><a href="#"><i class="fas fa-users"></i> Our Team</a></li>
-          <li><a href="#"><i class="fas fa-award"></i> Alumni</a></li>
-          <li><a href="#"><i class="fas fa-user-graduate"></i> Hall of Fame</a></li>
-          <li><a href="#"><i class="fas fa-money-check"></i> Sponsors</a></li>
-        </ul>
-      </li>
-      <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
-    </ul>
-    <a href="#" class="btn" id="login"><i class="fas fa-sign-in-alt"></i> LogIn</a>
   </nav>
 
+
+
+
+
+  <!-- Bootstrap 5 Bundle JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script src="./javascripts/main.js"></script>
 </body>
