--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
    -->
 
-  <nav class="navbar navbar-expand-lg navbar-light" id="main-nav">
+  <div style="margin-top: 1000px;"></div>
+
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light" id="main-nav">
 
     <div class="container-fluid">
 
@@ -104,6 +106,9 @@
       </div>
     </div>
   </nav>
+
+
+  <div style="margin-top: 1000px;"></div>
 
 
 
