--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
 
    -->
 
-  <div style="margin-top: 1000px;"></div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main-nav">
 
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light" id="main-nav">
-
-    <div class="container-fluid">
+    <div class="container">
 
       <a class="navbar-brand" href="#">
         <img id="brand-img" class="img-fluid" src="./images/brand.png" alt="brand-img">
@@ -109,6 +107,103 @@
 
 
   <div style="margin-top: 1000px;"></div>
+
+
+
+  <!-- 
+  
+      ====================
+      ====================
+  
+        Footer
+  
+      ====================
+      ====================
+  
+    -->
+
+  <footer id="top-footer" class="bg-light">
+
+    <div class="container-fluid">
+
+      <div class="social-media-footer">
+        <ul>
+          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-google"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="#"><i class="fab fa-github"></i></a></li>
+        </ul>
+      </div>
+
+    </div>
+  </footer>
+
+  <footer id="main-footer" class="bg-light">
+    <div class="container-fluid">
+
+      <div>
+        <img src="./images/brand.png" alt="brand-image">
+        <a href="" class="btn btn-primary"><i class="fas fa-download"></i> Download App</a>
+      </div>
+
+      <div>
+        <h2>Departments</h2>
+        <ul>
+          <li><a href="#">Academics</a></li>
+          <li><a href="#">Sports</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Career</a></li>
+        </ul>
+      </div>
+      <div>
+        <h2>School Policies</h2>
+        <ul>
+          <li><a href="#">Help & Supports</a></li>
+          <li><a href="#">Counselling</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Exam Policies</a></li>
+        </ul>
+      </div>
+      <div>
+        <h2>About Our System</h2>
+        <ul>
+          <li><a href="#">Infrastructure</a></li>
+          <li><a href="#">Business</a></li>
+          <li><a href="#">Branches</a></li>
+          <li><a href="#">Sponsors</a></li>
+        </ul>
+      </div>
+      <div>
+        <h2>Explore Services</h2>
+        <ul>
+          <li><a href="#">Counselling</a></li>
+          <li><a href="#">Libraries</a></li>
+          <li><a href="#">Seminars</a></li>
+          <li><a href="#">Books</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </footer>
+
+  <footer id="bottom-footer">
+    <p>Copyright &copy; 2021, NextSchool.
+      <span>All rights reserved</span>
+    </p>
+  </footer>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
