--- a/index.html
+++ b/index.html
@@ -105,8 +105,80 @@
     </div>
   </nav>
 
+  <!-- 
+  
+      ====================
+      ====================
+  
+        Showcase
+  
+      ====================
+      ====================
+  
+     -->
 
-  <div style="margin-top: 1000px;"></div>
+  <section id="showcase">
+    <div class="container">
+
+      <div class="slider">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/slider-image-1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./images/slider-image-2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./images/slider-image-3.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+
+      <div class="content">
+        <p><span>Why Choose Us</span></p>
+        <h2>Why <span class="brand-text text-primary">NextSchool</span>?</h2>
+        <p>We Learn to Serve – It’s our mission to ensure that in a safe, tranquil, stimulating & intellectually
+          challenging
+          environment, all students shall have ample opportunity to.</p>
+        <ul>
+          <li>School Assembly</li>
+          <li>Functions</li>
+          <li>Events</li>
+          <li>Trips & Excurtion</li>
+          <li>Awards</li>
+          <li>Jubilations</li>
+          <li>Infrastructure</li>
+          <li>Branches</li>
+          <li>Counselling</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+
+
+
+  <div style="margin-top: 300px;"></div>
 
 
 
