Font Size adjusted, span in heading tag remove

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
       <div class="content">
         <p><span>Why Choose Us</span></p>
-        <h2>Why <span class="brand-text text-primary">NextSchool</span>?</h2>
+        <h2 class="text-primary">Why NextSchool?</h2>
         <p>We Learn to Serve – It’s our mission to ensure that in a safe, tranquil, stimulating & intellectually
           challenging
           environment, all students shall have ample opportunity to.</p>
@@ -195,7 +195,7 @@
   <section id="statements">
     <div class="container">
       <p><span>To The Journey Ahead</span></p>
-      <h2>Gain <span class="text-primary">Valuable Knowledge and Experience</span></h2>
+      <h2 class="text-primary">Gain Valuable Knowledge and Experience</h2>
       <div class="statements-container">
         <div class="statement-box">
           <h3>Mveledzandivho Primary Life</h3>
@@ -230,7 +230,7 @@
 
   <section id="notices">
     <div class="container">
-      <h2><span class="text-primary">School Notice</span> Board</h2>
+      <h2 class="text-primary">School Notice Board</h2>
       <div class="notices-container">
         <div class="card">
           <div class="card-img-top" style="background: url('./images/notice-1.jpg') no-repeat center center/cover">
@@ -305,7 +305,7 @@
 
   <section id="news">
 
-    <h2>Latest <span class="text-primary">News</span> </h2>
+    <h2 class="text-primary">Latest News</h2>
 
     <div class="container">
 
@@ -375,7 +375,7 @@
 
   <section id="events">
     <div class="container">
-      <h2>Upcoming <span class="text-primary">Events</span></h2>
+      <h2 class="text-primary">Upcoming Events </h2>
       <div class="events-container">
 
         <div class="card">
