Menu Page Link Added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="container">
 
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img id="brand-img" class="img-fluid" src="./images/brand.png" alt="brand-img">
       </a>
 
@@ -52,7 +52,7 @@
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home"></i> Home</a>
+            <a class="nav-link active" aria-current="page" href="./index.html"><i class="fas fa-home"></i> Home</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -61,7 +61,7 @@
               <i class="fas fa-child"></i> School Life
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#"><i class="fas fa-photo-film"></i> Gallery</a></li>
+              <li><a class="dropdown-item" href="./gallery.html"><i class="fas fa-photo-film"></i> Gallery</a></li>
             </ul>
           </li>
 
@@ -71,8 +71,10 @@
               <i class="fas fa-school"></i> General
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#"><i class="fas fa-paperclip"></i> Enrollment Form</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fas fa-book"></i> Study Material</a></li>
+              <li><a class="dropdown-item" href="./enrollment-form.html"><i class="fas fa-paperclip"></i> Enrollment
+                  Form</a></li>
+              <li><a class="dropdown-item" href="./study-material.html"><i class="fas fa-book"></i> Study Material</a>
+              </li>
               <li><a class="dropdown-item" href="#"><i class="fas fa-chalkboard-user"></i> Academics</a></li>
             </ul>
           </li>
@@ -82,7 +84,7 @@
               aria-expanded="false">
               <i class="fas fa-newspaper"></i> News </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#"><i class="fas fa-newspaper"></i> News</a></li>
+              <li><a class="dropdown-item" href="./news.html"><i class="fas fa-newspaper"></i> News</a></li>
             </ul>
           </li>
 
@@ -92,15 +94,17 @@
               <i class="fas fa-address-card"></i> About
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#"><i class="fas fa-users"></i> Our Team</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fas fa-award"></i> Alumni</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fas fa-user-graduate"></i> Hall of Fame</a></li>
-              <li><a class="dropdown-item" href="#"><i class="fas fa-money-check"></i> Sponsors</a></li>
+              <li><a class="dropdown-item" href="./about-us.html"><i class="fas fa-address-card"></i> About Us</a></li>
+              <li><a class="dropdown-item" href="./our-team.html"><i class="fas fa-users"></i> Our Team</a></li>
+              <li><a class="dropdown-item" href="./alumni.html"><i class="fas fa-award"></i> Alumni</a></li>
+              <li><a class="dropdown-item" href="./hall-of-fame.html"><i class="fas fa-user-graduate"></i> Hall of
+                  Fame</a></li>
+              <li><a class="dropdown-item" href="./sponsors.html"><i class="fas fa-money-check"></i> Sponsors</a></li>
             </ul>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-address-book"></i> Contact</a>
+            <a class="nav-link" href="./contact.html"><i class="fas fa-address-book"></i> Contact</a>
           </li>
         </ul>
         <a href="#" id="login-btn" class="d-flex btn btn-primary"><i class="fas fa-sign-in-alt"></i> LogIn</a>
