Font Color and Button Changed from Blue to Black

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <a class="nav-link" href="./contact.html"><i class="fas fa-address-book"></i> Contact</a>
           </li>
         </ul>
-        <a href="#" id="login-btn" class="d-flex btn btn-primary"><i class="fas fa-sign-in-alt"></i> LogIn</a>
+        <a href="#" id="login-btn" class="d-flex btn btn-dark"><i class="fas fa-sign-in-alt"></i> LogIn</a>
       </div>
     </div>
   </nav>
@@ -163,7 +163,7 @@
 
       <div class="content">
         <p><span>Why Choose Us</span></p>
-        <h2 class="text-primary">Why NextSchool?</h2>
+        <h2 class="text-dark">Why NextSchool?</h2>
         <p>We Learn to Serve – It’s our mission to ensure that in a safe, tranquil, stimulating & intellectually
           challenging
           environment, all students shall have ample opportunity to.</p>
@@ -199,7 +199,7 @@
   <section id="statements">
     <div class="container">
       <p><span>To The Journey Ahead</span></p>
-      <h2 class="text-primary">Gain Valuable Knowledge and Experience</h2>
+      <h2 class="text-dark">Gain Valuable Knowledge and Experience</h2>
       <div class="statements-container">
         <div class="statement-box">
           <h3>Mveledzandivho Primary Life</h3>
@@ -234,17 +234,17 @@
 
   <section id="notices">
     <div class="container">
-      <h2 class="text-primary">School Notice Board</h2>
+      <h2 class="text-dark">School Notice Board</h2>
       <div class="notices-container">
         <div class="card">
           <div class="card-img-top" style="background: url('./images/notice-1.jpg') no-repeat center center/cover">
           </div>
           <div class="card-body">
             <h5 class="card-title">Poetry Competition</h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 7th October, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 7th October, 2021</span></p>
             <p class="card-text">Poetry Competition distributes a cumulative sum of <sup>R</sup>5,000 to winners.
             </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-dark">Read More</a>
           </div>
         </div>
 
@@ -253,10 +253,10 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Solo Music & Dance Competition</h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 5th October, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 5th October, 2021</span></p>
             <p class="card-text">An Inter Class Solo Singing Competition will organize on 5th October 2021.
             </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-dark">Read More</a>
           </div>
         </div>
 
@@ -265,13 +265,13 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Mother's day</h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 8th May, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 8th May, 2021</span></p>
             <p class="card-text">Mother's Day is the day that we celebrate our mothers and the influence that they have
               on our
               daily lives in South
               Africa.
             </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-dark">Read More</a>
           </div>
         </div>
 
@@ -280,16 +280,16 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Class Test</h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 3rd Apr, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 3rd Apr, 2021</span></p>
             <p class="card-text">for class 1, 2, 3, and 4 there will be class test of all the subjects from 11th April.
               so, start the preparation.
             </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-dark">Read More</a>
           </div>
         </div>
       </div>
       <div id="read-all">
-        <a href="#" class="btn btn-primary"><i class="fas fa-bell"></i> View all Notices</a>
+        <a href="#" class="btn btn-dark"><i class="fas fa-bell"></i> View all Notices</a>
       </div>
     </div>
   </section>
@@ -309,7 +309,7 @@
 
   <section id="news">
 
-    <h2 class="text-primary">Latest News</h2>
+    <h2 class="text-dark">Latest News</h2>
 
     <div class="container">
 
@@ -319,12 +319,12 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Model Behaviour</h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 1th January, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 1th January, 2021</span></p>
             <p class="card-text">I recently read a very interesting article on how Inuit parents raise their children.
               Entitled, &ldquo;How to discipline
               your kids...
             </p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-dark">Read More</a>
           </div>
         </div>
       </div>
@@ -336,10 +336,10 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Comprehending Comprehensio</h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 6th June, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 6th June, 2021</span></p>
             <p class="card-text">Comprehension skills are a fundamental part of reading and these skills need...
             </p>
-            <a href="#" class="btn btn-primary btn-sm">Read More</a>
+            <a href="#" class="btn btn-dark btn-sm">Read More</a>
           </div>
         </div>
 
@@ -348,11 +348,11 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Make your classroom a playroom!</h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 8th September, 2021</span>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 8th September, 2021</span>
             </p>
             <p class="card-text">Many of us talk about our classroom and about the &ldquo;work&rdquo; children...
             </p>
-            <a href="#" class="btn btn-primary btn-sm">Read More</a>
+            <a href="#" class="btn btn-dark btn-sm">Read More</a>
           </div>
         </div>
 
@@ -360,7 +360,7 @@
     </div>
 
     <div id="read-all">
-      <a href="#" class="btn btn-primary"><i class="fas fa-newspaper"></i> View all News</a>
+      <a href="#" class="btn btn-dark"><i class="fas fa-newspaper"></i> View all News</a>
     </div>
 
   </section>
@@ -379,7 +379,7 @@
 
   <section id="events">
     <div class="container">
-      <h2 class="text-primary">Upcoming Events </h2>
+      <h2 class="text-dark">Upcoming Events </h2>
       <div class="events-container">
 
         <div class="card">
@@ -387,7 +387,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title"><a href="#">Biggest Robotics Competition in Campus</a></h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 13th June, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 13th June, 2021</span></p>
           </div>
         </div>
 
@@ -396,7 +396,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title"><a href="#">Great Science Fair in main campus</a></h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 12th June, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 12th June, 2021</span></p>
           </div>
         </div>
 
@@ -405,7 +405,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title"><a href="#">Seminar on Internet of Thing in Campus</a></h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 13th June, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 13th June, 2021</span></p>
           </div>
         </div>
 
@@ -414,7 +414,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title"><a href="#">Biggest Tech Fest in Python and Perl</a></h5>
-            <p class="mb-1"><span class="text-primary"><i class="fas fa-calendar-days"></i> 11th May, 2021</span></p>
+            <p class="mb-1"><span class="text-dark"><i class="fas fa-calendar-days"></i> 11th May, 2021</span></p>
           </div>
         </div>
 
@@ -457,7 +457,7 @@
 
       <div>
         <img src="./images/brand.png" alt="brand-image">
-        <a href="" class="btn btn-primary"><i class="fas fa-download"></i> Download App</a>
+        <a href="" class="btn btn-dark"><i class="fas fa-download"></i> Download App</a>
       </div>
 
       <div>
