--- a/about-us.html
+++ b/about-us.html
@@ -108,7 +108,7 @@
             <a class="nav-link" href="./contact.html"><i class="fas fa-address-book"></i> Contact</a>
           </li>
         </ul>
-        <a href="#" id="login-btn" class="d-flex btn btn-primary"><i class="fas fa-sign-in-alt"></i> LogIn</a>
+        <a href="#" id="login-btn" class="d-flex btn btn-dark"><i class="fas fa-sign-in-alt"></i> LogIn</a>
       </div>
     </div>
   </nav>
@@ -133,7 +133,7 @@
         <div style="background: url('./images/about-welcome.jpg') no-repeat center center/cover"></div>
       </div>
       <div class="welcome-content">
-        <h1 class="text-primary">Welcome To Next School</h1>
+        <h1 class="text-dark">Welcome To Next School</h1>
         <p>Next School is one of the finest quintile-3 schools in the city.</p>
         <p>The dedicated and committed staff seeks to supply the learners with a nurturing and caring environment during
           which to
@@ -233,7 +233,7 @@
     <div class="container">
       <div class="about-content">
         <p><span>Best Schooling</span></p>
-        <h1 class="text-primary">Why Are We One Of The Finest School In The District</h1>
+        <h1 class="text-dark">Why Are We One Of The Finest School In The District</h1>
         <p>Balanced schooling ignites the mind for classroom learning and beyond.</p>
         <p>We believe in providing futuristic tomorrow with an online educational platform for better learning,
           experience,
@@ -290,7 +290,7 @@
 
       <div>
         <img src="./images/brand.png" alt="brand-image">
-        <a href="" class="btn btn-primary"><i class="fas fa-download"></i> Download App</a>
+        <a href="" class="btn btn-dark"><i class="fas fa-download"></i> Download App</a>
       </div>
 
       <div>
