Study Material Page Added, JavaScript Social Media Footer Bug Fixed, About Us Title Changed

--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" href="./css/style.css" />
 
-  <title>Home | Next School</title>
+  <title>About Us | Next School</title>
 </head>
 
 <body>
