--- a/study-material.html
+++ b/study-material.html
@@ -138,7 +138,7 @@
 
    -->
 
-    <section id="page-heading">
+    <section id="page-heading" data-page="study-material">
         <div class="container">
             <h1><i class="fas fa-book-open"></i> Study Materials</h1>
         </div>
