Gallery Page Completed

--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,9 @@
     <!-- Font Awesome 6 CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
 
+    <!-- Fancy Box CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" />
+
     <link rel="stylesheet" href="./css/style.css" />
 
     <title>Gallery | Next School</title>
@@ -205,33 +208,23 @@
 
     <section id="media">
         <div class="container">
-            <!-- Gallery -->
-            <div class="row">
-                <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
-                        class="w-100 shadow-1-strong rounded mb-4" alt="" />
-
-                    <img src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg"
-                        class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                </div>
-
-                <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg"
-                        class="w-100 shadow-1-strong rounded mb-4" alt="" />
-
-                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
-                        class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                </div>
-
-                <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
-                        class="w-100 shadow-1-strong rounded mb-4" alt="" />
-
-                    <img src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg"
-                        class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                </div>
-            </div>
-            <!-- Gallery -->
+            <div class="image-box"><a href="./images/gallery-img-1.jpg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-1.jpg" alt=""></a></div>
+            <div class="image-box"><a href="./images/gallery-img-2.jpeg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-2.jpeg" alt=""></a></div>
+            <div class="image-box"><a href="./images/gallery-img-3.jpg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-3.jpg" alt=""></a></div>
+            <div class="image-box"><a href="./images/gallery-img-4.jpeg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-4.jpeg" alt=""></a></div>
+            <div class="image-box"><a href="./images/gallery-img-5.jpg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-5.jpg" alt=""></a></div>
+            <div class="image-box"><a href="./images/gallery-img-6.jpg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-6.jpg" alt=""></a></div>
+            <div class="image-box"><a href="./images/gallery-img-7.jpg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-7.jpg" alt=""></a></div>
+            <div class="image-box"><a href="./images/gallery-img-8.jpg" data-fancybox="gallery-1" class="fancybox"><img
+                        src="./images/gallery-img-8.jpg" alt=""></a></div>
+        </div>
         </div>
     </section>
 
@@ -325,6 +318,12 @@
 
     <!-- Bootstrap 5 Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Fancy Box [Image Gallery Effect] -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 
     <script src="./javascripts/main.js"></script>
 </body>
