Related News Session Added to news-read.html

--- a/news-read.html
+++ b/news-read.html
@@ -141,19 +141,27 @@
     <section id="news-detail">
         <div class="container">
 
-            <h2 class="news-title">October school holidays won't be scrapped, despite loss of more than half of learning
-                time last year - Motshekga</h2>
+            <h2 class="news-title">
+                October school holidays won't be scrapped, despite loss of more than half of learning
+                time last year - Motshekga
+            </h2>
 
-            <div class="news-image"><img src="./images/news-5.jpg" alt=""></div>
+            <div class="news-image">
+                <img src="./images/news-5.jpg" alt="">
+            </div>
 
-            <p class="news-date"><i class="fas fa-calendar"></i> 25th October, 2021</p>
+            <p class="news-date"><i class="fas fa-calendar"></i>
+                25th October, 2021
+            </p>
 
             <div class="news-content">
 
                 <ul>
-                    <li><b>The Covid-19 pandemic has caused a massive loss in learning time at schools, especially in
-                            poorer
-                            communities.</b></li>
+                    <li>
+                        <b>
+                            The Covid-19 pandemic has caused a massive loss in learning time at schools, especially in
+                            poorer communities.</b>
+                    </li>
                     <li><b>Between 50% and 75% of learning was lost in 2020. At least 50% has been lost so far in
                             2021.</b>
                     </li>
@@ -245,19 +253,62 @@
                     Regarding the October school holidays, Motshekga said the Council of Education Ministers (CEM) met
                     on Friday and considered input from stakeholders. Teacher unions and school governing bodies were up
                     in arms about the scrapping of the holiday to make up for lost learning time.
-
                     The CEM decided not to meddle with the October holidays, said Motshekga.
-
                     "CEM further recommended that the lost number of school days should be recovered at district and
                     school level, but with reasonableness," she added.</p>
-
-
             </div>
         </div>
     </section>
 
 
+    <!-- 
+    
+    ====================
+    ====================
 
+      Related News
+
+    ====================
+    ====================
+
+      -->
+
+    <section id="related-news">
+        <div class="container">
+            <h2>Related News</h2>
+            <div class="news-container">
+                <div class="card">
+                    <img src="./images/news-1.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Model Behaviour</h5>
+                        <p><span class="text-dark"><i class="fas fa-calendar-days"></i> 1th January,
+                                2021</span></p>
+                        <a href="#" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="./images/news-2.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Comprehending Comprehensio</h5>
+                        <p><span class="text-dark"><i class="fas fa-calendar-days"></i> 6th June,
+                                2021</span></p>
+                        <a href="#" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="./images/news-3.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Make your classroom a playroom!</h5>
+                        <p><span class="text-dark"><i class="fas fa-calendar-days"></i> 8th September,
+                                2021</span></p>
+                        <a href="#" class="btn btn-dark">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
