--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" href="./css/style.css" />
 
-  <title>Home | Next School</title>
+  <title>Contact Us | Next School</title>
 </head>
 
 <body>
@@ -116,6 +116,25 @@
 
 
   <!-- 
+
+    ====================
+    ====================
+
+      Page Heading
+
+    ====================
+    ====================
+
+   -->
+
+  <section id="page-heading" data-page="contact">
+    <div class="container">
+      <h1><i class="fas fa-address-book"></i> Contact Us</h1>
+    </div>
+  </section>
+
+
+  <!-- 
       
     ====================
     ====================
@@ -126,6 +145,103 @@
     ====================
 
   -->
+
+  <section id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 contact-info">
+          <p class="text-uppercase">have any questions?</p>
+          <h2>Contact Us</h2>
+          <div class="contact-table">
+            <div class="row">
+              <div class="col-1">
+                <i class="fas fa-map-marker"></i>
+              </div>
+              <div class="col-11">
+                <p class="fw-bold">93 Grayston Dr Morningside, Sandton 2057 South Africa</p>
+                <p> - Visit Us on Weekdays</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-1">
+                <i class="fas fa-phone"></i>
+              </div>
+              <div class="col-11">
+                <p class="fw-bold"><a href="tel:+27-737878798">+27-737878798</a></p>
+                <p> - Monday to Friday</p>
+                <p> - 09:00 AM to 06:00 PM</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-1">
+                <i class="fas fa-envelope"></i>
+              </div>
+              <div class="col-11">
+                <p class="fw-bold"><a href="mailto:infor@nextschool.co.za">infor@nextschool.co.za</a></p>
+                <p> - Send us your query anytime!</p>
+              </div>
+            </div>
+          </div>
+          <div class="social-media">
+            <ul>
+              <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-google"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fab fa-github"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-7 ps-4 contact-form">
+          <h2>Get a Quote</h2>
+          <form action="" method="POST">
+            <div class="row">
+              <div class="col-12 mb-3">
+                <label for="email" class="form-label"><i class="fas fa-envelope"></i> Enter Email *</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter Your Email Here">
+              </div>
+              <div class="col-sm-6 mb-3">
+                <label for="name" class="form-label"><i class="fas fa-user"></i> Enter Name *</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter Your Name Here">
+              </div>
+              <div class="col-sm-6 mb-3">
+                <label for="subject" class="form-label"><i class="fas fa-tasks"></i> Enter Subject *</label>
+                <input type="text" class="form-control" id="subject" placeholder="Enter Subject Here">
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label"><i class="fas fa-sticky-note"></i> Enter Message *</label>
+                <textarea class="form-control" id="message" rows="5"> Enter Your Message Here</textarea>
+              </div>
+            </div>
+            <button class="btn btn-dark" type="submit"><i class="fas fa-paper-plane"></i> Send Message </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- 
+      
+    ====================
+    ====================
+
+      Map Section
+
+    ====================
+    ====================
+
+  -->
+
+  <!-- src="https://maps.google.com/maps?q='+YOUR_LAT+','+YOUR_LON+'&hl=es&z=14&amp;output=embed" -->
+
+  <section id="map">
+    <div class="container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3577.250591265805!2d27.857061314688647!3d-26.285975173685895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95a65ea115c3a1%3A0xe1aee2c6f955ff99!2sMveledzandivho%20Primary%20School!5e0!3m2!1sen!2sin!4v1636357957397!5m2!1sen!2sin"
+        allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  </section>
 
 
 
