--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           <li><a href="#">Exam Policies</a></li>
         </ul>
       </div>
-      <div>
+      <!-- <div>
         <h2>About Our System</h2>
         <ul>
           <li><a href="#">Infrastructure</a></li>
@@ -495,6 +495,25 @@
           <li><a href="#">Seminars</a></li>
           <li><a href="#">Books</a></li>
         </ul>
+      </div> -->
+
+      <div>
+        <h2>Contact Us</h2>
+          <div class="address">
+          <img src="images/location.png" alt="" style="width: 30px;">
+          <h4 class="address-detail"> 93 Grayston Dr Morningside, Sandton 2057 South Africa</h4>
+        </div>
+
+         <div > <img src="images/telephone-call.png" alt="" style="width: 30px;" >
+          <h4 class="address-detail"> +27-737878798</h4>
+          <p>Mon to Fri
+            9am to 6 pm</p>
+          </div>
+
+
+        
+      </div>
+        
       </div>
 
     </div>
